--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="img/cenario-passo0.png" alt="">
+            <img src="im" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <button class="btn-proximo" data-proximo="1">rio grande do sul</button>
+            <button class="btn-proximo" data-proximo="2">porto a legre</button>
         </div>
         <div class="passo" id="passo-1">
             <p>Você começa sua jornada no rio grande do sul, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
@@ -30,7 +30,7 @@
         <div class="passo" id="passo-3">
             <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
                 localizada no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <button class="btn-proximo" data-proximo="7">Seguir para curitiba</button>
         </div>
 
         <div class="passo" id="passo-4">
